crates/unsoundness_checker/tests/snapshots/extensive/markdown_test__mutating_globals_dict.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: combined_output
---
### Basic wrong type assignment

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Basic wrong type assignment.py:3:1
  |
1 | x: int = 5
2 |
3 | globals()['x'] = "hello"
  | ^^^^^^^^^^^^^^
4 |
5 | result: int = x
  |
info: rule `mutating-globals-dict` was selected in the configuration file


### Multiple global mutations

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Multiple global mutations.py:5:1
  |
3 | c: bool = True
4 |
5 | globals()['a'] = "wrong"
  | ^^^^^^^^^^^^^^
6 | globals()['b'] = 123
7 | globals()['c'] = "not_bool"
  |
info: rule `mutating-globals-dict` was selected in the configuration file

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Multiple global mutations.py:6:1
  |
5 | globals()['a'] = "wrong"
6 | globals()['b'] = 123
  | ^^^^^^^^^^^^^^
7 | globals()['c'] = "not_bool"
  |
info: rule `mutating-globals-dict` was selected in the configuration file

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Multiple global mutations.py:7:1
  |
5 | globals()['a'] = "wrong"
6 | globals()['b'] = 123
7 | globals()['c'] = "not_bool"
  | ^^^^^^^^^^^^^^
  |
info: rule `mutating-globals-dict` was selected in the configuration file


### Mutation in function

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Mutation in function.py:4:5
  |
3 | def increment() -> None:
4 |     globals()['count'] = "not_int"
  |     ^^^^^^^^^^^^^^^^^^
  |
info: rule `mutating-globals-dict` was selected in the configuration file


### Mutation with computed key


### Creating new globals


### Mutation in class method

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Mutation in class method.py:5:9
  |
3 | class Counter:
4 |     def update(self) -> None:
5 |         globals()['total'] = "not_int"
  |         ^^^^^^^^^^^^^^^^^^
  |
info: rule `mutating-globals-dict` was selected in the configuration file


### Mutation in loop

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Mutation in loop.py:4:5
  |
3 | for i in range(5):
4 |     globals()['data'] = "wrong"
  |     ^^^^^^^^^^^^^^^^^
  |
info: rule `mutating-globals-dict` was selected in the configuration file


### Conditional mutation

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Conditional mutation.py:4:5
  |
3 | if flag:
4 |     globals()['flag'] = "not_bool"
  |     ^^^^^^^^^^^^^^^^^
  |
info: rule `mutating-globals-dict` was selected in the configuration file


### Nested function mutation

error[mutating-globals-dict]: Mutating the `globals()` dictionary may lead to runtime type errors.
 --> Nested function mutation.py:5:9
  |
3 | def outer():
4 |     def inner():
5 |         globals()['outer_var'] = "wrong"
  |         ^^^^^^^^^^^^^^^^^^^^^^
6 |     inner()
  |
info: rule `mutating-globals-dict` was selected in the configuration file


### Mutation with del


### Update multiple at once


### Mutation with setdefault


### Mutation with pop


### Clear globals (dangerous!)


### Mutation in list comprehension


### Mutation with setitem


### Type-compatible mutation


### Assigning subtype


### Creating new untyped global
